--- a/src/components/main/main.css
+++ b/src/components/main/main.css
@@ -1,12 +1,13 @@
-.main{
+.main {
     flex: 1;
     min-height: 100vh;
     padding-bottom: 15vh;
     position: relative;
     background-color: #000000;
-
+    backdrop-filter: blur(10px);
 }
-.main .nav{
+
+.main .nav {
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -14,36 +15,42 @@
     padding: 20px;
     color: #585858;
 }
-.main .nav img{
+
+.main .nav img {
     width: 40px;
     border-radius: 50px;
 }
-.main-container{
+
+.main-container {
     max-width: 900px;
     margin: auto;
     z-index: 5;
 }
-.main-container .greet{
+
+.main-container .greet {
     margin: 50px 0px;
     font-size: 56px;
-    color:#c4c7c5;
+    color: #c4c7c5;
     font-weight: 500px;
 }
-.main .greet span{
-    background: -webkit-linear-gradient(16deg,#4b90ff,#ff5546);
+
+.main .greet span {
+    background: -webkit-linear-gradient(16deg, #4b90ff, #ff5546);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 }
-.main .cards{
+
+.main .cards {
     z-index: 5;
     display: grid;
-    grid-template-columns: repeat(auto-fill,minmax(180px,1fr));
+    grid-template-columns: repeat(auto-fill, minmax(180px, 1fr));
     gap: 15px;
 }
+
 .main .card {
     height: 200px;
     padding: 15px;
-    background-color: #ababab37;
+    background: linear-gradient(to right, #3f4243, #a153e98f, #2b2c2d);
     border: #f0f4f9 solid 1px;
     border-radius: 10px;
     position: relative;
@@ -51,7 +58,7 @@
     backdrop-filter: blur(20px);
 }
 
-.main .card img{
+.main .card img {
     width: 35px;
     padding: 5px;
     position: absolute;
@@ -59,15 +66,17 @@
     bottom: 10px;
     right: 10px;
     background: white;
-    
 }
-.main .card p{
-    color: #edededc2;
+
+.main .card p {
+    color: #f6f6f6;
     font-size: 17px;
 }
-.main .card:hover{
-    background-color: #ffffff99;
+
+.main .card:hover {
+    background-color: #18083fbc;
 }
+
 .main-bottom {
     position: absolute;
     bottom: 0;
@@ -76,6 +85,7 @@
     padding: 0px 20px;
     margin: auto;
 }
+
 .search-box {
     z-index: 3;
     display: flex;
@@ -85,14 +95,15 @@
     background-color: #cecece57;
     padding: 10px 20px;
     border-radius: 50px;
-    backdrop-filter: blur(10px); 
+    backdrop-filter: blur(10px);
 }
 
-.search-box img{
+.search-box img {
     width: 24px;
     cursor: pointer;
 }
-.search-box input{
+
+.search-box input {
     flex: 1;
     background: transparent;
     border: 0;
@@ -101,58 +112,68 @@
     font-size: 18px;
     color: #f0f4f9;
 }
-.search-box div{
+
+.search-box div {
     display: flex;
     align-items: center;
     gap: 15px;
 }
-.main .bottom-info{
+
+.main .bottom-info {
     font-size: 13px;
     margin: 15px auto;
     text-align: center;
     font-weight: 300;
     color: #f0f4f9;
 }
-.result{
+
+.result {
     padding: 0px 5%;
     max-height: 70vh;
     overflow-y: scroll;
     color: #c4c7c5;
 }
-.result::-webkit-scrollbar{
+
+.result::-webkit-scrollbar {
     display: none;
 }
-.result-title{
+
+.result-title {
     margin: 40px 0px;
     display: flex;
     align-items: center;
     gap: 20px;
 }
-.result img{
+
+.result img {
     width: 40px;
     border-radius: 50px;
 }
-.result-data{
+
+.result-data {
     display: flex;
     align-items: start;
     gap: 20px;
     color: #c4c7c5;
 }
-.loader{
+
+.loader {
     width: 100%;
     display: flex;
     flex-direction: column;
     gap: 10px;
 }
-.loader hr{
-border-radius: 4px;
-border: none;
-background-color: #000000;
-background: linear-gradient(to right,#4b4d4e,#c953e98a,#2b2c2d);
-background-size: 800px 50px;
-height: 20px;
-animation: loader 4s infinite linear;
+
+.loader hr {
+    border-radius: 4px;
+    border: none;
+    background-color: #000000;
+    background: linear-gradient(to right, #4b4d4e, #c953e98a, #2b2c2d);
+    background-size: 800px 50px;
+    height: 20px;
+    animation: loader 4s infinite linear;
 }
+
 .ellipse {
     position: absolute;
     top: 0;
@@ -160,22 +181,40 @@ animation: loader 4s infinite linear;
     width: 100%;
     height: 100%;
     z-index: 2;
-    background-image: radial-gradient(ellipse at center, rgba(62, 32, 118, 0.29) 0%, rgba(51, 51, 69, 0) 100%);
+    background-image: radial-gradient(ellipse at center, rgba(97, 58, 170, 0.29) 0%, rgba(51, 51, 69, 0) 100%);
     pointer-events: none;
 }
 
-@keyframes loader{
-    0%{
-        background-position: -800px 0px;
-
-    }
-    100%{
-        background-position: 800px 0px;
-    }
-}
-
-.result-data p{
+.result-data p {
     font-size: 17px;
     font-weight: 300px;
     line-height: 1.8;
+}
+
+/* Responsive styles */
+@media only screen and (max-width: 768px) {
+    .main-container {
+        padding: 0px 20px;
+    }
+    
+    .main-container .greet {
+        font-size: 40px;
+    }
+    
+    .main .cards {
+        grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+    }
+    .search-box {
+        width:97%;
+        padding: 8px 12px;
+        gap: 5px;
+    }
+
+    .search-box img {
+        width: 18px;
+    }
+
+    .search-box input {
+        font-size: 16px;
+    }
 }
